# zennfes-spring-AmiVoice

./: .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  README.md  biome.json  package-lock.json  package.json  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: cr.yml  deno-tests.yml  lint.yml  playwright-tests.yml  security.yml
.husky/: pre-push
backend/fastapi/: .gitignore  README.md  pyproject.toml
backend/fastapi/app/: main.py
backend/fastapi/app/api/: deps.py
backend/fastapi/app/api/routes/: health.py  protected.py
backend/fastapi/app/core/: config.py  security.py
backend/fastapi/app/schemas/: health.py  protected.py
backend/supabase/: .gitignore  config.toml  seed.sql
backend/supabase/functions/: deno.json
backend/supabase/functions/_shared/: README.md  amazon-gift.ts  auth.ts  database.types.ts  fcm.ts  handler.ts  logger.ts  response.ts  search-query.ts  stripe.ts  supabase.ts  validation.ts
backend/supabase/functions/cancel-subscription/: index.ts
backend/supabase/functions/create-setup-intent/: index.ts
backend/supabase/migrations/: 20250101000000_initial_setup.sql  20260422000000_add_pgroonga_search.sql  20260423000000_convert_to_enums.sql  20260424000000_add_line_auth_lookup.sql  20260428000000_add_stripe_payment.sql  20260430000000_add_stripe_purchase.sql  20260501000000_fix_upd_t_purchase_result.sql  20260502000000_add_stripe_subscription.sql  20260518000000_fix_sel_todos_search_enum.sql  20260530080505_add_t_transcription_record.sql
backend/supabase/test/: .gitignore  README.md  deno.json  run-test.sh
docs/amivoice/: README.md  summary-zenn.md  summary.md  troubleshooting.md
frontend/mobile/: README.md  env.json  pubspec.yaml
frontend/mobile/lib/: app.dart  main.dart
frontend/web/: .gitignore  components.json  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/web/src/: middleware.ts
scripts/: pre-push.mjs  test-runner.mjs
scripts/checks/: code-rules.mjs  sql-rules.mjs  zod-parity.mjs
supabase/.temp/: pooler-url  project-ref
(+316 files in other folders)
